crates/ktsense-cli/tests/snapshots/outline_snapshots__md__multi_module__app_build_gradle_kts.snap
---
source: crates/ktsense-cli/tests/outline_snapshots.rs
expression: "outline(fixture.root, relative_path, format)"
---
exit: 0
stderr: (empty)
--- stdout ---
## app/build.gradle.kts

No public declarations.
