crates/ktsense-cli/tests/snapshots/outline_snapshots__md__multi_module__app_src_main_kotlin_shop_app_checkout_CheckoutConfig_kt.snap
---
source: crates/ktsense-cli/tests/outline_snapshots.rs
expression: "outline(fixture.root, relative_path, format)"
---
exit: 0
stderr: (empty)
--- stdout ---
## app/src/main/kotlin/shop/app/checkout/CheckoutConfig.kt

package shop.app.checkout

```kotlin
object CheckoutConfig {
    const val currency: String
    const val maxItems: Int
}
```
