crates/ktsense-cli/tests/snapshots/outline_snapshots__md__multi_module__app_src_main_kotlin_shop_app_checkout_OrderImporter_kt.snap
---
source: crates/ktsense-cli/tests/outline_snapshots.rs
expression: "outline(fixture.root, relative_path, format)"
---
exit: 0
stderr: (empty)
--- stdout ---
## app/src/main/kotlin/shop/app/checkout/OrderImporter.kt

package shop.app.checkout

```kotlin
class OrderImporter(private val repository: OrderRepository = InMemoryOrderRepository()) {
    fun importAll(orders: List<Order>): Int
}
```
