crates/ktsense-cli/tests/snapshots/outline_snapshots__md__multi_module__app_src_main_kotlin_shop_app_reporting_AuditTrail_kt.snap
---
source: crates/ktsense-cli/tests/outline_snapshots.rs
expression: "outline(fixture.root, relative_path, format)"
---
exit: 0
stderr: (empty)
--- stdout ---
## app/src/main/kotlin/shop/app/reporting/AuditTrail.kt

package shop.app.reporting

```kotlin
class AuditTrail {
    fun record(message: String)
    fun all(): List<String>
}
```
1 private or internal declaration hidden; pass --private to include them.
