crates/ktsense-cli/tests/snapshots/outline_snapshots__md__multi_module__app_src_main_kotlin_shop_app_reporting_ReportBackfill_kt.snap
---
source: crates/ktsense-cli/tests/outline_snapshots.rs
expression: "outline(fixture.root, relative_path, format)"
---
exit: 0
stderr: (empty)
--- stdout ---
## app/src/main/kotlin/shop/app/reporting/ReportBackfill.kt

package shop.app.reporting

```kotlin
class ReportBackfill(private val repository: OrderRepository) {
    fun rebuild(orders: List<Order>): Int
    fun stamp(): Instant
}
```
