crates/ktsense-cli/tests/snapshots/outline_snapshots__md__multi_module__core_src_main_kotlin_shop_order_OrderRepository_kt.snap
---
source: crates/ktsense-cli/tests/outline_snapshots.rs
expression: "outline(fixture.root, relative_path, format)"
---
exit: 0
stderr: (empty)
--- stdout ---
## core/src/main/kotlin/shop/order/OrderRepository.kt

package shop.order

```kotlin
interface OrderRepository {
    fun save(order: Order): OrderId
    fun findById(id: OrderId): Order?
}
```
