crates/ktsense-cli/tests/snapshots/outline_snapshots__md__multi_module__core_src_main_kotlin_shop_order_Order_kt.snap
---
source: crates/ktsense-cli/tests/outline_snapshots.rs
expression: "outline(fixture.root, relative_path, format)"
---
exit: 0
stderr: (empty)
--- stdout ---
## core/src/main/kotlin/shop/order/Order.kt

package shop.order

```kotlin
data class OrderId(val value: Long)
data class Order(val id: OrderId, val customerEmail: String, val totalCents: Long)
```
1 private or internal declaration hidden; pass --private to include them.
