crates/ktsense-cli/tests/snapshots/outline_snapshots__md__multi_module__db_src_main_kotlin_shop_db_JdbcOrderRepository_kt.snap
---
source: crates/ktsense-cli/tests/outline_snapshots.rs
expression: "outline(fixture.root, relative_path, format)"
---
exit: 0
stderr: (empty)
--- stdout ---
## db/src/main/kotlin/shop/db/JdbcOrderRepository.kt

package shop.db

```kotlin
class JdbcOrderRepository(private val url: String = "jdbc:h2:mem:orders") : OrderRepository {
    override fun save(order: Order): OrderId
    override fun findById(id: OrderId): Order?
}
```
